added header, main, footer

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
 
 /* Mixins, helpers and functions */
 @import './utils/mixins';
+@import './utils/visually-hidden';
 
 /* Adding Font Awesome*/
 @import './base/fontawesome/fontawesome.scss';
@@ -21,3 +22,15 @@
 /* Components */
 @import './layout/body.scss';
 @import './layout/container.scss';
+@import './layout/header.scss';
+@import './components/logo.scss';
+@import './components/header-nav.scss';
+@import './layout/hero.scss';
+@import './components/button.scss';
+@import './layout/services.scss';
+@import './layout/about.scss';
+@import './layout/blog.scss';
+@import './components/social.scss';
+@import './layout/team.scss';
+@import './layout/footer.scss';
+@import './components/footer-nav.scss';
